order-form-v1.2/force-app/main/default/objects/Order_Form_Brand_Logo__mdt/fields/Brand_Value__c.field-meta.xml
<CustomField>
    <fullName>Brand_Value__c</fullName>
    <label>Brand Value</label>
    <description>Exact QuoteLine Brand__c picklist value this row maps. Blank on the Is_Default row.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>