order-form-v1.2/force-app/main/default/objects/Order_Form_Brand_Logo__mdt/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <label>Is Default</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>