order-form-v1.2/force-app/main/default/objects/Order_Form_Brand_Logo__mdt/fields/Logo_Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Logo_Document_Name__c</fullName>
    <label>Logo Document Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>